turtleart.house.House.scala.error
Compilation error:
House:8: error: ':' expected but ')' found.
def drawSquare(size) {
                   ^House:28: error: identifier expected but '}' found.
}
^